design: fix design issues

--- a/assets/styles/admin/main.less
+++ b/assets/styles/admin/main.less
@@ -4,6 +4,10 @@
 @import "../../public/admin_svg.less";
 @import "~@shopsys/framework/styles/admin/svg-custom.less";
 
+// Components
+//// wrap
+@import "components/wrap/bar.less";
+
 //// Forms
 @import "core/form/input.less";
 
