--- a/assets/styles/frontend/common/components/box/order.less
+++ b/assets/styles/frontend/common/components/box/order.less
@@ -128,10 +128,14 @@
                 width: @box-order-info-content-width;
             }
 
-            &--full-width {
+            &--full-width-row {
                 display: flex;
                 flex-direction: row;
                 flex-wrap: wrap;
+                width: 100%;
+            }
+
+            &--full-width {
                 width: 100%;
             }
 
