--- a/assets/styles/frontend/common/components/list/params.less
+++ b/assets/styles/frontend/common/components/list/params.less
@@ -7,6 +7,10 @@
     .reset-ul();
     width: 100%;
 
+    &--with-gap {
+        margin-bottom: 30px;
+    }
+
     &__item {
         display: flex;
         line-height: 26px;
