--- a/templates/Front/Content/Order/index.html.twig
+++ b/templates/Front/Content/Order/index.html.twig
@@ -33,7 +33,7 @@
                 {% endblock %}
             </div>
             <div class="header__contact dont-print">
-                <div class="contact-us contact-us--everytime-visible">
+                <div class="contact-us">
                     <div class="contact-us__open-hours">
                         {{ shopInfoPhoneHours }}
                     </div>
