--- a/assets/styles/frontend/common/libs/magnific/magnific-popup.less
+++ b/assets/styles/frontend/common/libs/magnific/magnific-popup.less
@@ -153,8 +153,8 @@ button::-moz-focus-inner {
 
 .mfp-counter {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 10px;
   color: #cccccc;
   font-size: 12px;
   line-height: 18px; }
