--- a/templates/Front/Content/Product/boxTabs.html.twig
+++ b/templates/Front/Content/Product/boxTabs.html.twig
@@ -50,36 +50,6 @@
                             </div>
                         </div>
                     {% endif %}
-
-                    {% if youtubeDetails %}
-                        <div id="video">
-                            <div class="in-tab__content__title js-tabs-button active" data-tab-id="videos">
-                                <a href="#" class="in-tab__content__title__link">
-                                    {{ videosHeadline }}
-                                </a>
-                                <i class="svg svg-triangle"></i>
-                            </div>
-                            <div class="in-tab__content__item js-tabs-content active" data-tab-id="videos">
-                                <div class="in-user-text" itemprop="videos">
-                                    <h3 class="in-user-text__title">
-                                        {{ videosHeadline }}
-                                    </h3>
-                                    {% for youtubeDetail in youtubeDetails %}
-                                        <div class="youtubeWrapper margin-bottom-10">
-                                            <iframe
-                                                    width="560"
-                                                    height="315"
-                                                    src="https://www.youtube.com/embed/{{ youtubeDetail.getVideoId() }}"
-                                                    frameborder="0"
-                                                    allowfullscreen
-                                            ></iframe>
-                                        </div>
-                                    {% endfor %}
-                                </div>
-                            </div>
-                        </div>
-                    {% endif %}
-
                 </div>
 
                 <div class="in-tab__content__right">
@@ -151,6 +121,40 @@
 
                             {{ _self.parameters(product, productParameterValues, parametersHeadline, productVisibleProductCategoryDomains) }}
                             {{ _self.files(product) }}
+                        </div>
+                    {% endif %}
+                </div>
+
+                <div class="in-tab__content__bottom">    
+                    {% if youtubeDetails %}
+                        <div id="video">
+                            <div class="in-tab__content__title js-tabs-button active" data-tab-id="videos">
+                                <a href="#" class="in-tab__content__title__link">
+                                    {{ videosHeadline }}
+                                </a>
+                                <i class="svg svg-triangle"></i>
+                            </div>
+                            <div class="in-tab__content__item js-tabs-content active" data-tab-id="videos">
+                                <div class="in-user-text" itemprop="videos">
+                                    <h3 class="in-user-text__title">
+                                        {{ videosHeadline }}
+                                    </h3>
+
+                                    <div class="in-user-text__videos">
+                                        {% for youtubeDetail in youtubeDetails %}
+                                            <div class="in-user-text__videos__item">
+                                                <iframe
+                                                        width="100%"
+                                                        height="315"
+                                                        src="https://www.youtube.com/embed/{{ youtubeDetail.getVideoId() }}"
+                                                        frameborder="0"
+                                                        allowfullscreen
+                                                ></iframe>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     {% endif %}
                 </div>
