Changed pattern for disallowed paths in robots.txt regarding paths with filters.

--- a/templates/Front/robots.txt.twig
+++ b/templates/Front/robots.txt.twig
@@ -1,7 +1,7 @@
 {% include '@ShopsysFramework/Common/robots.txt.twig' %}
 
 User-agent: *
-Disallow: /*/*/?*product_filter_form*
+Disallow: /*product_filter_form
 {% for path in disallowedPaths -%}
     Disallow: {{ path }}
 {% endfor %}
