design: added more space for no image on the product detail

--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -28,7 +28,7 @@
                                 {% set galleryImages = getImages(product) %}
                                 {% set showGallery = galleryImages|length > 1 or youtubeDetails %}
 
-                                <div class="box-detail__image__main">
+                                <div class="box-detail__image__main{% if not imageExists(product) %} box-detail__image__main--no-image{% endif %}">
                                     {% if imageExists(product) %}
                                         <a href="{{ imageUrl(product, 'original') }}"
                                         class="{{ showGallery ? 'js-gallery-main-image' : 'js-popup-image' }}">
