--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -93,6 +93,13 @@
             text-align: center;
 
             font-size: 0;
+
+            &--no-image {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 350px;
+            }
         }
     }
 
