design: remove unnecessary code from box components

--- a/assets/styles/frontend/common/components/box/progress.less
+++ b/assets/styles/frontend/common/components/box/progress.less
@@ -1,8 +1,3 @@
-@box-progress-steps-count: 5;
-@box-progress-padding-horizontal: 17px;
-@box-progress-padding-vertical: 15px;
-@box-progress-item-width: 266px;
-@box-progress-item-height: 50px;
 @box-progress-item-gap: 30px;
 @box-progress-item-active-border-size: 3px;
 @box-progress-item-done-background: #ebf6ea;
@@ -70,8 +65,8 @@
 
         @media @query-lg {
             justify-content: center;
-            width: @box-progress-item-width;
-            height: @box-progress-item-height;
+            width: 266px;
+            height: 50px;
             margin-left: @box-progress-item-gap;
 
             border-radius: @radius;
