--- a/assets/styles/frontend/common/components/in/tab.less
+++ b/assets/styles/frontend/common/components/in/tab.less
@@ -1,9 +1,7 @@
-@in-tab-border-color: @color-gray;
 @in-tab-head-item-font-size: 15px;
 @in-tab-head-item-gap: 25px;
 @in-tab-head-item-height-mobile: 40px;
 @in-tab-head-bottom-gap: 60px;
-@in-tab-head-bottom-gap-small: 30px;
 @in-tab-arrow-size: 10px;
 @in-tab-content-item-gap: 80px;
 @in-tab-content-right-width: 480px;
@@ -27,7 +25,7 @@
         }
 
         &--small-gap {
-            margin-bottom: @in-tab-head-bottom-gap-small;
+            margin-bottom: 30px;
         }
 
         &--no-border {
