design: refactoring of helpers and mixins

--- a/templates/Front/Content/Advert/bigBannerOnHomepage.html.twig
+++ b/templates/Front/Content/Advert/bigBannerOnHomepage.html.twig
@@ -17,7 +17,7 @@
                         {{ image(advert, { size: 'bigBanner', alt: advert.smallTitle }) }}
                     </div>
                     <div class="box-special-offer__grayscale__title">
-                        <span class="box-special-offer__grayscale__title__text double-lined">
+                        <span class="box-special-offer__grayscale__title__text">
                             {{ advert.productTitle }}
                         </span>
                     </div>
