--- a/templates/Front/Inline/Cart/afterAddWithErrorWindow.html.twig
+++ b/templates/Front/Inline/Cart/afterAddWithErrorWindow.html.twig
@@ -1,7 +1,7 @@
 <div class="box-popup-add">
     <div class="box-popup-add__content">
         <div class="box-popup-add__content__title">
-            <span class="box-popup-add__content__title__text double-lined">
+            <span class="box-popup-add__content__title__text">
                 {{ 'Oops! Error occurred.'|trans }}
             </span>
         </div>
