--- a/templates/Front/Inline/Store/list.html.twig
+++ b/templates/Front/Inline/Store/list.html.twig
@@ -1,6 +1,6 @@
 
     <div class="box-popup-add__content__title">
-        <span class="box-popup-add__content__title__text double-lined">
+        <span class="box-popup-add__content__title__text">
             {{ 'Vyberte prodejnu'|trans }}
         </span>
     </div>
