--- a/templates/Front/Inline/Cart/afterAddWindow.html.twig
+++ b/templates/Front/Inline/Cart/afterAddWindow.html.twig
@@ -2,7 +2,7 @@
 <div class="box-popup-add">
     <div class="box-popup-add__content">
         <div class="box-popup-add__content__title">
-            <span class="box-popup-add__content__title__text double-lined">
+            <span class="box-popup-add__content__title__text">
                 {{ 'Do košíku přidáno %quantity%&nbsp;%unit%<br>celkem za %price%'|transHtml({
                     '%quantity%': addedQuantity|formatNumber,
                     '%unit%': addedUnit.name,
