--- a/templates/Front/Inline/PickupPlace/pickupPlaceSearch.html.twig
+++ b/templates/Front/Inline/PickupPlace/pickupPlaceSearch.html.twig
@@ -1,6 +1,6 @@
 <div class="js-pickup-place-search" data-pickup-place-autocomplete-url="{{ url('front_pickup_place_autocomplete') }}">
     <div class="box-popup-add__content__title">
-        <span class="box-popup-add__content__title__text double-lined">
+        <span class="box-popup-add__content__title__text">
             {{ 'Vyberte pobočku'|trans }}
         </span>
     </div>
