design: design: remove unnecessary code from layout components

--- a/assets/styles/frontend/common/components/box/dropdown.less
+++ b/assets/styles/frontend/common/components/box/dropdown.less
@@ -284,6 +284,18 @@
                 font-size: @box-dropdown-item-font-size;
                 font-weight: 500;
             }
+
+            &__logged-link {
+                display: block;
+                padding: 5px 0;
+
+                color: @color-base;
+                text-decoration: none;
+
+                &:hover {
+                    color: @color-base;
+                }
+            }
         }
     }
 }
