design: create separate css for pages

--- a/assets/styles/frontend/common/helpers.less
+++ b/assets/styles/frontend/common/helpers.less
@@ -9,3 +9,6 @@
 @import "helpers/margin.less";
 @import "helpers/padding.less";
 @import "helpers/display.less";
+
+// programmer place for style
+@import "todo.less";
