--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -21,6 +21,11 @@
     {{ paginator.titleAddon(paginationResult) }}
 {% endblock %}
 
+{% block pageStyles %}
+    {% set entryDirectory2 = 'frontend-style-category-' ~ getDomain().currentDomainConfig.stylesDirectory %}
+    {{ encore_entry_link_tags( entryDirectory2 ) }}
+{% endblock %}
+
 {% block main_content %}
     <div class="box-list">
         <div class="web__line">
