[TF-975] Chaning placeholder for name

--- a/templates/Front/Content/ContactForm/contactForm.html.twig
+++ b/templates/Front/Content/ContactForm/contactForm.html.twig
@@ -4,7 +4,7 @@
 {{ form_errors(form) }}
 <div class="wrap-article__row">
     <div class="wrap-article__row__half">
-        {{ form_row(form.name, { label: 'Full name'|trans, attr: { tabindex: 1 }, errors_attr: { class: 'form-error--under' }  }) }}
+        {{ form_row(form.name, { label: 'Jméno'|trans, attr: { tabindex: 1 }, errors_attr: { class: 'form-error--under' }  }) }}
     </div>
     <div class="wrap-article__row__half">
         {{ form_row(form.email, { label: 'E-mail'|trans, attr: { tabindex: 3 }, errors_attr: { class: 'form-error--under' }  }) }}
