--- a/templates/Front/Content/Product/filterFormMacro.html.twig
+++ b/templates/Front/Content/Product/filterFormMacro.html.twig
@@ -154,7 +154,7 @@
                                         {{ parameterForm.vars.label }}
                                         <i class="svg svg-triangle"></i>
                                     </span>
-                                    <div class="box-filter__choice__content display-none" id="filter-{{ parameterForm.vars.id }}">
+                                    <div class="box-filter__choice__content" id="filter-{{ parameterForm.vars.id }}">
                                         {% for parameterValueForm in parameterForm %}
                                             <label class="form-choice form-choice--block js-product-filter-parameter-value{% if loop.index > visibleChoicesLimit %} js-product-filter-box-label display-none{% endif %}">
                                                 {{ form_widget(parameterValueForm, { attr: { class: 'form-choice__input css-checkbox', 'data-filter-name-with-entity-id': filterForm.parameters.vars.id ~ '_' ~ parameterId ~ '_' ~ parameterValueForm.vars.value } }) }}
