design: change rotate of arrows

--- a/templates/Front/Content/Product/filterFormMacro.html.twig
+++ b/templates/Front/Content/Product/filterFormMacro.html.twig
@@ -150,7 +150,7 @@
                         {% for parameterId, parameterForm in filterForm.parameters %}
                             <div class="js-product-filter-parameter">
                                 <div class="box-filter__choice js-product-filter-box" id="{{ parameterForm.vars.id }}">
-                                    <span class="box-filter__choice__title js-product-filter-parameter-label js-responsive-toggle" data-element="filter-{{ parameterForm.vars.id }}">
+                                    <span class="box-filter__choice__title open js-product-filter-parameter-label js-responsive-toggle" data-element="filter-{{ parameterForm.vars.id }}">
                                         {{ parameterForm.vars.label }}
                                         <i class="svg svg-triangle"></i>
                                     </span>
