--- a/templates/Front/Content/Order/transportAndPaymentBox.html.twig
+++ b/templates/Front/Content/Order/transportAndPaymentBox.html.twig
@@ -61,7 +61,7 @@
                                 <button
                                     type="button"
                                     data-id="{{ choice.data.id }}"
-                                    class="box-chooser__item__pickup-button js-pickup-place-change-button link-style btn-no-style{% if pickupPlaceName is same as ('') or checked == false %} display-none{% endif %}"
+                                    class="box-chooser__item__pickup-button js-pickup-place-change-button link-style btn-no-style{% if checked == false %} display-none{% endif %}"
                                     data-form-field-class="{% if choice.data.isPickupPlace() %}js-pickup-place-input{% elseif choice.data.isChooseStore() %}js-store-input{% endif %}"
                                     data-type="{{ choice.data.transportType }}"
                                     data-language="{{ getDomain().locale }}"
