order process optimization: orderPreview object is passed as an argument of OrderController::previewAction
- it prevents from multiple preview calculations
- see https://github.com/shopsys/shopsys/issues/1805

--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -193,7 +193,8 @@
                         <div id="js-order-preview" class="box-cart__cart" data-url="{{ url('front_order_preview') }}">
                             {{ render(controller('App\\Controller\\Front\\OrderController:previewAction', {
                                 orderStep: "1",
-                                formSubmit: form.submit
+                                formSubmit: form.submit,
+                                orderPreview: orderPreview
                             })) }}
                         </div>
                     {{ form_end(form) }}
