--- a/templates/Front/Content/Order/step2.html.twig
+++ b/templates/Front/Content/Order/step2.html.twig
@@ -32,7 +32,8 @@
                             paymentId: payment is empty ? null : payment.id,
                             orderStep: '2',
                             formSubmit: form.save,
-                            registration: form.vars['value'].registration
+                            registration: form.vars['value'].registration,
+                            orderPreview: orderPreview
                         })) }}
                     </div>
                 </div>
