--- a/templates/Front/Content/Order/step3.html.twig
+++ b/templates/Front/Content/Order/step3.html.twig
@@ -210,7 +210,8 @@
                             paymentId: payment is empty ? null : payment.id,
                             orderStep: '3',
                             registration: form.registration.vars.checked,
-                            formSubmit: form.save
+                            formSubmit: form.save,
+                            orderPreview: orderPreview
                         })) }}
                     </div>
                 </div>
