design: fix design issues

--- a/assets/styles/frontend/common/components/in/discount-message.less
+++ b/assets/styles/frontend/common/components/in/discount-message.less
@@ -40,7 +40,7 @@
             margin: 10px 0 0 10px;
         }
 
-        @media @query-vl {
+        @media @query-xl {
             margin: 0 0 0 10px;
         }
     }
