--- a/templates/Front/Content/AboutUs/info.html.twig
+++ b/templates/Front/Content/AboutUs/info.html.twig
@@ -90,10 +90,11 @@
                         <div class="box-contact__store__row">
                             <div class="box-contact__store__row__left box-contact__store__row__left--bottom">
                                 {{ 'V případě jakýchkoliv dotazů volejte na číslo'|trans }}
-                                <a href="tel:483 10 44 44">{{ '483 10 44 44'|trans }}</a>. 
-                                <a href="mailto:prodejna@tropicfishing.cz">{{ 'prodejna@tropicfishing.cz'|trans }}</a>
-                                {{ 'a telefon'|trans }}
-                                <a href="tel:+420 777 862 119">{{ '+420 777 862 119'|trans }}</a>.
+                                <a href="tel:+420 777 862 119">{{ '+420 777 862 119'|trans }}</a>,
+                                {{ 'případně na infolinku'|trans }}
+                                <a href="tel:483 104 444">{{ '483 104 444'|trans }}</a>,
+                                {{ 'nebo nás kontaktuje na e-mailu'|trans }}
+                                <a href="mailto:prodejna@tropicfishing.cz">{{ 'prodejna@tropicfishing.cz'|trans }}</a>.
                             </div>
                         </div>
                     </div>
