--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -152,14 +152,16 @@
                                             </div>
                                         </div>
                                         <div class="table-cart__messages">
-                                            <div class="table-cart__messages__item in-message in-message--without-gap in-message--warning js-maximum-amount-warning display-none">
-                                                {{ 'Větší množství není možné nakoupit'|trans }}
-                                            </div>
-                                            {% if cartItem.product.isAvailableInDays(true) and not cartItem.saleItem %}
-                                                <div class="table-cart__messages__item in-message in-message--without-gap in-message--warning">
-                                                    {{ 'Tento produkt prodlouží dodání celé objednávky'|trans }}
+                                            <div class="table-cart__messages__left">
+                                                <div class="table-cart__messages__item in-message in-message--without-gap in-message--warning js-maximum-amount-warning display-none">
+                                                    {{ 'Větší množství není možné nakoupit'|trans }}
                                                 </div>
-                                            {% endif %}
+                                                {% if cartItem.product.isAvailableInDays(true) and not cartItem.saleItem %}
+                                                    <div class="table-cart__messages__item in-message in-message--without-gap in-message--warning">
+                                                        {{ 'Tento produkt prodlouží dodání celé objednávky'|trans }}
+                                                    </div>
+                                                {% endif %}
+                                            </div>
                                             {{ discountExclusion.discountExclusionNotice(cartItem.product, registrationDiscountExclusionText, promoDiscountExclusionText, allDiscountExclusionText, 'in-discount-message--cart') }}
                                         </div>
                                     </div>
