design: rename var and edit main style files

--- a/assets/styles/frontend/common/main-base.less
+++ b/assets/styles/frontend/common/main-base.less
@@ -62,6 +62,7 @@
 @import "components/list/menu.less";
 @import "components/list/socials.less";
 @import "components/list/reasons-to-buy.less";
+@import "components/list/pros-cons.less";
 
 //// window
 @import "components/window/bar.less";
