--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -21,8 +21,8 @@
 {% endblock %}
 
 {% block pageStyles %}
-    {% set entryDirectory2 = 'frontend-style-cart-' ~ getDomain().currentDomainConfig.stylesDirectory %}
-    {{ encore_entry_link_tags( entryDirectory2 ) }}
+    {% set entryDirectoryPage = 'frontend-style-cart-' ~ getDomain().currentDomainConfig.stylesDirectory %}
+    {{ encore_entry_link_tags( entryDirectoryPage ) }}
 {% endblock %}
 
 {% block main_content %}
