--- a/templates/Front/Content/Order/index.html.twig
+++ b/templates/Front/Content/Order/index.html.twig
@@ -48,8 +48,8 @@
 {% endblock %}
 
 {% block pageStyles %}
-    {% set entryDirectory2 = 'frontend-style-order-' ~ getDomain().currentDomainConfig.stylesDirectory %}
-    {{ encore_entry_link_tags( entryDirectory2 ) }}
+    {% set entryDirectoryPage = 'frontend-style-order-' ~ getDomain().currentDomainConfig.stylesDirectory %}
+    {{ encore_entry_link_tags( entryDirectoryPage ) }}
 {% endblock %}
 
 {% block main_content %}
