--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -22,8 +22,8 @@
 {% endblock %}
 
 {% block pageStyles %}
-    {% set entryDirectory2 = 'frontend-style-category-' ~ getDomain().currentDomainConfig.stylesDirectory %}
-    {{ encore_entry_link_tags( entryDirectory2 ) }}
+    {% set entryDirectoryPage = 'frontend-style-category-' ~ getDomain().currentDomainConfig.stylesDirectory %}
+    {{ encore_entry_link_tags( entryDirectoryPage ) }}
 {% endblock %}
 
 {% block main_content %}
