design: edit path of components

--- a/assets/styles/frontend/common/main-category.less
+++ b/assets/styles/frontend/common/main-category.less
@@ -18,6 +18,7 @@
 @import "components/list/products-line.less";
 @import "components/list/products-set.less";
 @import "components/list/last-visited.less";
+@import "components/list/tags.less";
 
 //// box
 @import "components/box/list.less";
