design: edit path of components

--- a/assets/styles/frontend/common/main-homepage.less
+++ b/assets/styles/frontend/common/main-homepage.less
@@ -14,6 +14,7 @@
 @import "components/list/products-slider.less";
 @import "components/list/products-bomb.less";
 @import "components/list/last-visited.less";
+@import "components/list/tags.less";
 
 //// box
 @import "components/box/popup-add.less";
