--- a/assets/styles/frontend/common/main-other-pages.less
+++ b/assets/styles/frontend/common/main-other-pages.less
@@ -37,6 +37,7 @@
 @import "components/list/products-bomb.less";
 @import "components/list/products-slider.less";
 @import "components/list/simple.less";
+@import "components/list/tags.less";
 
 //// table
 @import "components/table/params.less";
