--- a/assets/styles/frontend/common/main-order.less
+++ b/assets/styles/frontend/common/main-order.less
@@ -7,6 +7,7 @@
 
 //// in
 @import "components/in/action.less";
+@import "components/in/opener.less";
 
 //// list
 @import "components/list/cart-preview.less";
