--- a/assets/styles/frontend/common/main-prelist.less
+++ b/assets/styles/frontend/common/main-prelist.less
@@ -12,13 +12,16 @@
 @import "components/in/place.less";
 
 //// list
+@import "components/list/articles.less";
 @import "components/list/benefits.less";
 @import "components/list/prelist-categories.less";
 @import "components/list/products-line.less";
 @import "components/list/products-slider.less";
 @import "components/list/last-visited.less";
+@import "components/list/tags.less";
 
 //// box
+@import "components/box/articles.less";
 @import "components/box/prelist.less";
 @import "components/box/products-slider.less";
 @import "components/box/reviews.less";
