--- a/assets/styles/frontend/common/components/list/categories.less
+++ b/assets/styles/frontend/common/components/list/categories.less
@@ -34,7 +34,9 @@
 
         &__link {
             display: flex;
+            align-items: center;
             width: 100%;
+            height: 100%;
             padding: @list-categories-item-inner-gap-vertical @list-categories-item-inner-gap-horizontal;
             flex-direction: row;
 
@@ -82,7 +84,7 @@
 
             font-size: 16px;
             font-weight: 600;
-            color: @color-base;
+            color: @color-primary;
 
             &__name {
                 text-decoration: underline;
