--- a/assets/styles/frontend/common/components/list/variants.less
+++ b/assets/styles/frontend/common/components/list/variants.less
@@ -71,6 +71,10 @@
                 }
 
                 img {
+                    position: static;
+                    max-width: auto;
+                    max-height: auto;
+                    
                     border: 1px solid @color-border;
                 }
             }
